--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -21,7 +21,6 @@ LABEL org.label-schema.schema-version="1.0" \
 
 WORKDIR /srv
 
-# commented for DockerHub Automated Build debug
-#RUN git clone --single-branch --branch $SOURCE_BRANCH --recursive --depth=1 https://github.com/mapsme/omim && /bin/rm -rf omim/.git
+RUN git clone --single-branch --branch $SOURCE_BRANCH --recursive --depth=1 https://github.com/mapsme/omim && /bin/rm -rf omim/.git
 
 CMD ["true"]
