--- a/Dockerfile.release.full
+++ b/Dockerfile.release.full
@@ -15,16 +15,16 @@ LABEL org.label-schema.schema-version="1.0" \
     org.label-schema.name="alexkuzko/omim" \
     org.label-schema.description="Manual builds of the https://github.com/mapsme/omim/ based on official CI Linux image." \
     org.label-schema.url="https://github.com/alexkuzko/omim" \
-    org.label-schema.docker.cmd="docker run -v /PATH/TO/SCRATCH/root:/root -v /PATH/TO/SCRATCH/target:/srv/target -v /PATH/TO/SOURCE:/srv/source -it alexkuzko/omim:$VERSION" \
+    org.label-schema.docker.cmd="docker run -v /PATH/TO/SCRATCH/root:/root/maps_build -v /PATH/TO/SCRATCH/target:/srv/target -v /PATH/TO/SOURCE:/srv/source -it alexkuzko/omim:$VERSION" \
     org.label-schema.version="$VERSION" \
     org.label-schema.vcs-url=$URL \
     org.label-schema.vcs-branch=$BRANCH \
     org.label-schema.vcs-ref=$COMMIT
 
-RUN cd /srv/omim \
+RUN cd /root/omim \
     && (echo | ./configure.sh) \
     && (./tools/unix/build_omim.sh -r) \
-    && (cd /srv/omim/tools/python/maps_generator && pip3 install -r requirements.txt && /bin/cp -pf var/etc/map_generator.ini.default var/etc/map_generator.ini && cd /srv) \
-    && (bash /srv/omim/tools/unix/run_tests.sh -b /srv/omim-build-release && echo "TEST PASSED" || { echo "TEST FAILED"; true; })
+    && (cd /root/omim/tools/python/maps_generator && pip3 install -r requirements.txt && /bin/cp -pf var/etc/map_generator.ini.default var/etc/map_generator.ini && cd /root) \
+    && (bash /root/omim/tools/unix/run_tests.sh -b /root/omim-build-release && echo "TEST PASSED" || { echo "TEST FAILED"; true; })
 
 CMD ["true"]
